--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -12,10 +12,40 @@
 .categories-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center; 
+  gap: 20px;
+  padding: 20px; 
 }
 
 .category-item {
-  width: 48%; /* 两列布局，可根据需要调整 */
-  margin-bottom: 10px; /* 间距，可根据需要调整 */
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  width: calc(25% - 20px);
+  text-align: center;
+}
+
+.content {
+  flex: 1; /* 占据所有可用空间 */
+  height: 90vh; /* 使用视口高度，确保页面内容高度占满整个屏幕 */
+  display: flex; /* 启用flex布局 */
+  flex-direction: column; /* 子元素垂直排列 */
+  overflow-y: scroll;
+}
+
+.category-item-icons {
+  display: flex;
+  justify-content: space-around; /* 图标并排显示 */
+  width: 100px; /* 根据需要调整 */
+  margin-top: 10px; /* 图标和文本之间的间距 */
+}
+
+.edit-button {
+  margin-top: 20px; /* 编辑完成按钮和类别列表的间距 */
+  background-color: #007aff; /* 按钮背景颜色 */
+  color: white; /* 按钮文字颜色 */
+  border: none; /* 去除边框 */
+  // padding: 10px 20px; /* 按钮内边距 */
+  border-radius: 5px; /* 按钮圆角 */
 }
